# miniqr

./: Cargo.toml  Dockerfile  LICENSE.md  README.md  build_all.sh
src/: index.html  main.rs
