[package]
name = "miniqr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.0"
log = "0.4.20"
qrcode = "0.12.0"
tokio = { version = "1.33.0", features = ["full"] }
urlencoding = "2.1.3"
warp = "0.3.6"

[profile.release]
opt-level = 'z'
lto = true
